# Halpha

./: .gitattributes  .gitignore  AGENTS.md  DESIGN.md  MILESTONES.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  docs-governance.yml  scheduled-code-health.yml  scheduled-package-and-docs.yml  (+2 more)
config/: critical-invariant-trace.registry.json  dependency-lifecycle-ledger.json  evidence-storage-policy.json  halpha.example.toml  halpha.live-read-only.example.toml  halpha.live-write.toml
docs/: artifact-governance.md  concept-definition-index.zh-CN.md  dashboard-contracts.md  decision-intelligence-contracts.md  decision-rationale-index.zh-CN.md  delivery-workbench-contracts.md  derivatives-market-contracts.md  event-intelligence-contracts.md  feature-factor-contracts.md  intelligence-fusion-contracts.md  live-contracts.md  logging-standards.md  m0-technical-implementation-plan.md  macro-calendar-contracts.md  monitoring-contracts.md  onchain-flow-contracts.md  outcome-tracking-contracts.md  product-stability-contracts.md  quant-contracts.md  requirement-constraint-index.zh-CN.md  research-data-contracts.md  storage-contracts.md  strategy-lifecycle-contracts.md  user-state-contracts.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
governance/: __init__.py  requirements.txt  validate_construction_plan.py  validate_current_plan.py
migrations/: env.py
requirements/: b00.in  b00.txt  dev.in  dev.txt  runtime.in  runtime.txt
research/: .gitignore  README.md  catalog-2026-07-21.json  catalog.json  halpha_research_data.py  requirements.in  requirements.txt  verify_vectorbt.py
runs/: README.md
tests/: conftest.py  dashboard_asset_helpers.py  history_traceability_helpers.py  test_alert_decision_golden_cases.py  test_alert_decision_material.py  test_alert_decisions.py  test_build_manifest_generation.py  test_codex_context.py  test_codex_runner.py  test_collection_coverage.py  test_collection_planner.py  test_command_job_process.py  test_config.py  test_core_scheduler.py  test_cross_sectional_momentum.py  test_dashboard_browser_smoke.py  test_dashboard_cli.py  test_dashboard_data_cleanup.py  test_dashboard_data_viewer.py  test_dashboard_jobs.py  test_dashboard_live_history.py  test_dashboard_monitor.py  test_dashboard_privacy_safety.py  test_dashboard_run_aggregation.py  test_dashboard_schedule.py  test_dashboard_service.py  test_dashboard_service_restart.py  test_dashboard_services.py  test_dashboard_settings.py  test_dashboard_ui_smoke.py  test_data_collect_cli.py  test_data_collection_service.py  test_data_export.py  test_data_export_cli.py  test_data_inspection.py  test_data_quality.py  test_data_quality_material.py  test_decision_entry_modules.py  test_decision_intelligence_delta.py  test_decision_intelligence_material.py  (+126 more)
tools/: __init__.py
(+2073 files in other folders)
