[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "halpha"
version = "0.0.0"
description = "Personal market research report pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ccxt>=4,<5",
  "fastapi>=0.115,<1",
  "pandas>=2,<4",
  "pyarrow>=16,<25",
  "PyYAML>=6,<7",
  "uvicorn>=0.30,<1",
  "vectorbt>=1,<2",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2,<3",
  "pytest>=8,<9",
  "ruff>=0.8,<1",
]
nlp = [
  "gliner>=0.2,<1",
  "huggingface-hub>=0.20,<2",
  "sentence-transformers>=3,<6",
  "torch>=2,<3",
  "transformers>=4,<5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"halpha.dashboard.static" = ["*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "browser_smoke: opt-in local browser smoke checks that launch Playwright through npx",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
